--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fedo-hsa-sales",
-  "version": "0.0.1",
+  "version": "0.0.2-build.0",
   "description": "",
   "author": "",
   "private": true,
