--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fedo-health-sales-api",
+  "name": "fedo-sales-api",
   "version": "0.0.2-build.21",
   "description": "",
   "author": "",
