--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: node:14
 
 .global:
   before_script:
-    - export SERVICE_NAME=fedo-health-sales-api
+    - export SERVICE_NAME=fedo-sales-api
     - export TAGGED_APP_VERSION=`echo $SERVICE_NAME`_`git describe --tags --always --abbrev=0`-`git rev-parse --short HEAD`
     - export AS_FEDO="sudo -H -u fedo-dev"
     - export DEPLOY_LOCATION_DEV=/home/fedo-dev/system-storage/apps/dev.$SERVICE_NAME
@@ -62,6 +62,8 @@ Deploy:
     -     echo "Deploying to UAT / demo"
     -     ssh -i $SSH_PRIVATE_KEY_SALES -o StrictHostKeyChecking=no ubuntu@dev.services.fedo.health "sudo systemctl stop uat.$SERVICE_NAME;$AS_FEDO bash -c \"cp $TAGGED_APP_VERSION.tar $RELEASE_LOCATION; cd $DEPLOY_LOCATION_UAT; unlink uat-$SERVICE_NAME;rm -rf *; tar -xzf $RELEASE_LOCATION/$TAGGED_APP_VERSION.tar; ln -s $DEPLOY_LOCATION_UAT/$TAGGED_APP_VERSION $DEPLOY_LOCATION_UAT/uat-$SERVICE_NAME\"; cd; rm -f $TAGGED_APP_VERSION.tar; sudo systemctl start uat.$SERVICE_NAME;"
     - fi
+    - cd
+    - rm -f $TAGGED_APP_VERSION.tar
 
   after_script:
     - !reference [.global, after_script]
