--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fedo-sales-api",
-  "version": "1.0.0-rc.21",
+  "version": "1.0.0-build.0",
   "description": "",
   "author": "",
   "private": true,
