added new package nodehtml

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase-admin": "^11.0.1",
     "handlebars": "^4.7.7",
     "html-pdf": "^3.0.1",
+    "html-pdf-node": "^1.0.8",
     "node-rsa": "^1.1.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
