added spme requirements

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.1.0",
     "aws-sdk": "^2.1148.0",
+    "bluebird": "^3.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
@@ -38,8 +39,10 @@
     "handlebars": "^4.7.7",
     "html-pdf": "^3.0.1",
     "html-pdf-node": "^1.0.8",
+    "inline-css": "^4.0.2",
     "node-rsa": "^1.1.1",
     "pg": "^8.7.3",
+    "puppeteer": "^19.8.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
