--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-rsa": "^1.1.1",
     "pg": "^8.7.3",
     "puppeteer": "^19.8.5",
+    "puppeteer-html-pdf": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
