--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "twilio": "^3.77.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
